Write Mapped MBF Maps

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "from scipy.ndimage import gaussian_filter\n",
-    "from utilities import ReadVTUFile, ThresholdInBetween, ThresholdByUpper, LargestConnectedRegion\n",
+    "from utilities import ReadVTUFile, ThresholdInBetween, ThresholdByUpper, LargestConnectedRegion, WriteVTUFile\n",
     "from vtk.util.numpy_support import vtk_to_numpy, numpy_to_vtk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +156,8 @@
    ],
    "source": [
     "path = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/InterPatientStudy\"\n",
+    "opath = os.path.join(path,\"MappedPreCABG\")\n",
+    "os.system(f\"mkdir {opath}\")\n",
     "metadata = glob.glob(f\"{path}/*.xlsx\")\n",
     "VTUFiles = sorted(glob.glob(f\"{path}/*.vtu\"))\n",
     "TerritoryLabels = sorted(glob.glob(f\"{path}/*.dat\"))\n",
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1248,6 +1250,18 @@
     "def MapNongrafted(meanA, meanB, stdA, stdB, DataA):\n",
     "    return meanB + (stdB/stdA)*(DataA - meanA)\n",
     "\n",
+    "def Map3DVolume(meanA, meanB, stdA, stdB, VolumeA):\n",
+    "    for i in range(VolumeA.GetPointData().GetNumberOfArrays()):\n",
+    "            arrayname_ = VolumeA.GetPointData().GetArrayName(i)\n",
+    "            if 'scalars' in arrayname_.lower():\n",
+    "                ScalarArray = arrayname_\n",
+    "\n",
+    "    ScalarData = vtk_to_numpy(VolumeA.GetPointData().GetArray(ScalarArray))\n",
+    "    ScalarData_Mapped = numpy_to_vtk(MapNongrafted(meanA, meanB, stdA, stdB, ScalarData))\n",
+    "    ScalarData_Mapped.SetName(\"MappedScalar\")\n",
+    "    VolumeA.GetPointData().AddArray(ScalarData_Mapped)\n",
+    "\n",
+    "    return VolumeA\n",
     "\n",
     "\n",
     "for patient_id in patient_ids:\n",
@@ -1279,6 +1293,8 @@
     "    array_B = AbsMBFData_B[t]\n",
     "    mean_B = np.mean(array_B)\n",
     "    std_B = np.std(array_B)\n",
+    "    MBF_A_mapped = Map3DVolume(mean_A, mean_B, std_A, std_B, MBF_A)\n",
+    "    WriteVTUFile(os.path.join(opath,f\"{patient_id}A_MBF_Mapped.vtu\"), MBF_A_mapped)\n",
     "    #data_ = pd.DataFrame({\"MBF\": np.concatenate([array_A, array_B]), \"Territories\": [t]*len(array_A) + [t]*len(array_B), \"Type\": ['A']*len(array_A) + ['B']*len(array_B)})\n",
     "    #data = pd.concat([data, data_], ignore_index=True)\n",
     "    # Mapping\n",
