Remove Gradient Method

--- a/CABG/MBFTools/PolarPlotGradient.ipynb
+++ b/CABG/MBFTools/PolarPlotGradient.ipynb
@@ -15,117 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B/PolarMap\"\n",
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03A/PolarMap\"\n",
     "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
     "PolarMap = ReadVTPFile(polar_map)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gradient_filter(vtk_image):\n",
-    "    gradient_filter = vtk.vtkImageGradient()\n",
-    "    gradient_filter.SetInputData(vtk_image)\n",
-    "    gradient_filter.SetDimensionality(3)\n",
-    "    gradient_filter.Update()\n",
-    "\n",
-    "    return gradient_filter.GetOutput()\n",
-    "    \n",
-    "def define_borders(gradient_image):\n",
-    "    magnitude_filter = vtk.vtkImageMagnitude()\n",
-    "    magnitude_filter.SetInputData(gradient_image)\n",
-    "    magnitude_filter.Update()\n",
-    "    \n",
-    "    return magnitude_filter.GetOutput()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<vtkmodules.vtkCommonDataModel.vtkPolyData(0x7fcd5c2da2e0) at 0x1a44d4c40>"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GradientFilter = vtk.vtkGradientFilter()\n",
-    "GradientFilter.SetInputData(PolarMap)\n",
-    "#GradientFilter.SetInputArrayToProcess(0, 0, 0, vtk.vtkDataObject.FIELD_ASSOCIATION_POINTS, \"MBFProfile\")\n",
-    "GradientFilter.SetInputScalars(vtk.vtkDataObject.FIELD_ASSOCIATION_POINTS, \"MBFProfile\")\n",
-    "GradientFilter.Update()\n",
-    "\n",
-    "GradientFilter.GetOutput()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapGradient.vtp\")\n",
-    "WriteVTPFile(ofile, GradientFilter.GetOutput())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-9.9999997e+37, -9.9999997e+37, -9.9999997e+37, ...,\n",
-       "        7.9290184e+01,  7.8991417e+01,  7.8770378e+01], dtype=float32)"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MBFPolarValue = vtk_to_numpy(PolarMap.GetPointData().GetArray(\"MBFProfile\"))\n",
-    "MBFPolarValue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MBFPolarValue[(MBFPolarValue > 1000) | (MBFPolarValue < -100)] = 0\n",
-    "\n",
-    "MBFPolarValueVTK = numpy_to_vtk(MBFPolarValue)\n",
-    "MBFPolarValueVTK.SetName(\"MBFProfile2\")\n",
-    "PolarMap.GetPointData().AddArray(MBFPolarValueVTK)\n",
-    "\n",
-    "\n",
-    "GradientFilter = vtk.vtkGradientFilter()\n",
-    "GradientFilter.SetInputData(PolarMap)\n",
-    "#GradientFilter.SetInputArrayToProcess(0, 0, 0, vtk.vtkDataObject.FIELD_ASSOCIATION_POINTS, \"MBFProfile\")\n",
-    "GradientFilter.SetInputScalars(vtk.vtkDataObject.FIELD_ASSOCIATION_POINTS, \"MBFProfile2\")\n",
-    "GradientFilter.Update()\n",
-    "\n",
-    "GradientFilter.GetOutput()\n",
-    "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapGradient.vtp\")\n",
-    "WriteVTPFile(ofile, GradientFilter.GetOutput())"
    ]
   },
   {
@@ -248,6 +144,17 @@
     "\n",
     "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapIschemic.vtp\")\n",
     "WriteVTPFile(ofile, PolarMap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B/PolarMap\"\n",
+    "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
+    "PolarMap = ReadVTPFile(polar_map)"
    ]
   }
  ],
