--- a/CABG/MBFTools/PolarPlotGradient.ipynb
+++ b/CABG/MBFTools/PolarPlotGradient.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "410634"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,28 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[156.3745, 121.26375]"
+       "[116.96689, 70.072395]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "means = [MBFPolarValue[labels == i].mean() for i in range(2)]\n",
+    "mean_healthy = np.max(means)\n",
+    "mean_ischemic = np.min(means)\n",
     "means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
        "1"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False, False, False, ...,  True, False,  True])"
+       "array([False, False, False, ...,  True,  True,  True])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,13 +150,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B/PolarMap\"\n",
     "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
     "PolarMap = ReadVTPFile(polar_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.mixture import GaussianMixture\n",
+    "\n",
+    "MBFPolarValue = vtk_to_numpy(PolarMap.GetPointData().GetArray(\"MBFProfile\"))\n",
+    "X = MBFPolarValue.reshape(-1,1)\n",
+    "gmm = GaussianMixture(n_components=2, means_init=np.array([[mean_ischemic], [mean_healthy]]))\n",
+    "gmm.fit(X)\n",
+    "labels = gmm.predict(X)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(labels[labels == 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 96.69513456],\n",
+       "       [139.47140924]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gmm.means_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01288013, 0.98711987])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gmm.weights_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1]), array([767771]))"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(labels, return_counts=True)"
    ]
   }
  ],
