Comment Wall thickness measurements for now

--- a/CABG/MBFTools/RayBasedProfile.ipynb
+++ b/CABG/MBFTools/RayBasedProfile.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "slice_base = f\"{InputFolder}/Slice_Base.vtp\"\n",
     "#InputMyocardium = f\"{InputFolder}/Myocardium.vtp\"\n",
     "InputMBF = f\"{InputFolder}/MBF_Territories.vtu\"\n",
-    "InputMyocardiumVTU = f\"{InputFolder}/MyocardiumModel.vtu\"\n",
+    "#InputMyocardiumVTU = f\"{InputFolder}/MyocardiumModel.vtu\"\n",
     "OutputFolder = f\"{InputFolder}/RayCastingResults\"\n",
     "\n",
     "\n",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +300,7 @@
     "WriteVTUFile(InputMBFApex, Apex)\n",
     "\n",
     "#MyocardiumSurface = ReadVTPFile(InputMyocardium)\n",
+    "'''\n",
     "Myocardium = ReadVTUFile(InputMyocardiumVTU)\n",
     "\n",
     "Boundary_Array = numpy_to_vtk(np.array([1 for _ in range(Myocardium.GetNumberOfPoints())]))\n",
@@ -316,7 +317,8 @@
     "UpperMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, True)\n",
     "ApexMyo = ClipVolumeWPlane(Myocardium, apex_centeroid, CL_axis, False)\n",
     "WriteVTUFile(InputMBFBase, UpperMyo)\n",
-    "WriteVTUFile(InputMBFApex, ApexMyo)"
+    "WriteVTUFile(InputMBFApex, ApexMyo)\n",
+    "'''"
    ]
   },
   {
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,10 +393,10 @@
     "            \n",
     "            territory_profile.SetName(\"TerritoryProfile\")\n",
     "\n",
-    "            ray_projected = ProbeFilter(ray_projected, UpperMyo)\n",
+    "            #ray_projected = ProbeFilter(ray_projected, UpperMyo)\n",
     "            ray_projected.GetPointData().AddArray(mbf_profile)\n",
     "            ray_projected.GetPointData().AddArray(territory_profile)\n",
-    "            \n",
+    "            '''\n",
     "            Silhouette = vtk_to_numpy(ray_projected.GetPointData().GetArray(\"MyocardiumSilhouette\"))\n",
     "\n",
     "            if Silhouette is None or len(Silhouette) != ray_projected.GetNumberOfPoints():\n",
@@ -409,7 +411,7 @@
     "            WallThicknessArray = numpy_to_vtk(np.full(ray_projected.GetNumberOfPoints(), wall_thinkness, dtype=float))\n",
     "            WallThicknessArray.SetName(\"WallThickness\")\n",
     "            ray_projected.GetPointData().AddArray(WallThicknessArray)\n",
-    "\n",
+    "            '''\n",
     "            Rays.AddInputData(BoldLine(ray_projected))\n",
     "    \n",
     "        Rays.Update()\n",
@@ -446,10 +448,10 @@
     "        \n",
     "        territory_profile.SetName(\"TerritoryProfile\")\n",
     "\n",
-    "        ray_projected = ProbeFilter(ray_projected, ApexMyo)\n",
+    "        #ray_projected = ProbeFilter(ray_projected, ApexMyo)\n",
     "        ray_projected.GetPointData().AddArray(mbf_profile)\n",
     "        ray_projected.GetPointData().AddArray(territory_profile)\n",
-    "        \n",
+    "        '''\n",
     "        Silhouette = vtk_to_numpy(ray_projected.GetPointData().GetArray(\"MyocardiumSilhouette\"))\n",
     "        \n",
     "        if Silhouette is None or len(Silhouette) != ray_projected.GetNumberOfPoints():\n",
@@ -464,7 +466,7 @@
     "        WallThicknessArray = numpy_to_vtk(np.full(ray_projected.GetNumberOfPoints(), wall_thinkness, dtype=float))\n",
     "        WallThicknessArray.SetName(\"WallThickness\")\n",
     "        ray_projected.GetPointData().AddArray(WallThicknessArray)\n",
-    "\n",
+    "        '''\n",
     "        Rays_.AddInputData(BoldLine(ray_projected))\n",
     "\n",
     "\n",
@@ -484,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,10 +531,10 @@
     "            \n",
     "            territory_profile.SetName(\"TerritoryProfile\")\n",
     "\n",
-    "            ray_projected = ProbeFilter(ray_projected, UpperMyo)\n",
+    "            #ray_projected = ProbeFilter(ray_projected, UpperMyo)\n",
     "            ray_projected.GetPointData().AddArray(mbf_profile)\n",
     "            ray_projected.GetPointData().AddArray(territory_profile)\n",
-    "            \n",
+    "            '''\n",
     "            Silhouette = vtk_to_numpy(ray_projected.GetPointData().GetArray(\"MyocardiumSilhouette\"))\n",
     "\n",
     "            if Silhouette is None or len(Silhouette) != ray_projected.GetNumberOfPoints():\n",
@@ -547,7 +549,7 @@
     "            WallThicknessArray = numpy_to_vtk(np.full(ray_projected.GetNumberOfPoints(), wall_thinkness, dtype=float))\n",
     "            WallThicknessArray.SetName(\"WallThickness\")\n",
     "            ray_projected.GetPointData().AddArray(WallThicknessArray)\n",
-    "\n",
+    "            '''\n",
     "            slice_rays.AddInputData(ray_projected)\n",
     "        slice_rays.Update()\n",
     "    \n",
@@ -560,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,10 +602,10 @@
     "        \n",
     "        territory_profile.SetName(\"TerritoryProfile\")\n",
     "\n",
-    "        ray_projected = ProbeFilter(ray_projected, ApexMyo)\n",
+    "        #ray_projected = ProbeFilter(ray_projected, ApexMyo)\n",
     "        ray_projected.GetPointData().AddArray(mbf_profile)\n",
     "        ray_projected.GetPointData().AddArray(territory_profile)\n",
-    "        \n",
+    "        '''\n",
     "        Silhouette = vtk_to_numpy(ray_projected.GetPointData().GetArray(\"MyocardiumSilhouette\"))\n",
     "        \n",
     "        if Silhouette is None or len(Silhouette) != ray_projected.GetNumberOfPoints():\n",
@@ -618,7 +620,7 @@
     "        WallThicknessArray = numpy_to_vtk(np.full(ray_projected.GetNumberOfPoints(), wall_thinkness, dtype=float))\n",
     "        WallThicknessArray.SetName(\"WallThickness\")\n",
     "        ray_projected.GetPointData().AddArray(WallThicknessArray)\n",
-    "\n",
+    "        '''\n",
     "        Rays_Hemisphere.AddInputData(ray_projected)\n",
     "\n",
     "    Rays_Hemisphere.Update()\n",
@@ -772,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,16 +787,16 @@
     "TerritoryProfile_Array.SetName(\"TerritoryProfile\")\n",
     "TerritoryProfile_Array.SetNumberOfComponents(1)\n",
     "TerritoryProfile_Array.SetNumberOfTuples(MyocardiumSurface.GetNumberOfPoints())\n",
-    "\n",
+    "'''\n",
     "WallThickness_Array = vtk.vtkFloatArray()\n",
     "WallThickness_Array.SetName(\"WallThickness\")\n",
     "WallThickness_Array.SetNumberOfComponents(1)\n",
     "WallThickness_Array.SetNumberOfTuples(MyocardiumSurface.GetNumberOfPoints())\n",
-    "\n",
+    "'''\n",
     "Rays_Output = OutputVolume\n",
     "Rays_MBF = Rays_Output.GetPointData().GetArray(\"MBFProfile\")\n",
     "Rays_territory = Rays_Output.GetPointData().GetArray(\"TerritoryProfile\")\n",
-    "Rays_thickness = Rays_Output.GetPointData().GetArray(\"WallThickness\")\n",
+    "#Rays_thickness = Rays_Output.GetPointData().GetArray(\"WallThickness\")\n",
     "\n",
     "Locator = vtk.vtkPointLocator()\n",
     "Locator.SetDataSet(Rays_Output)\n",
@@ -811,16 +813,16 @@
     "    if closest_point_id == -1:\n",
     "        MBFProfile_Array.SetValue(i, 0)\n",
     "        TerritoryProfile_Array.SetValue(i, -1)\n",
-    "        WallThickness_Array.SetValue(i, 0)\n",
+    "        #WallThickness_Array.SetValue(i, 0)\n",
     "    else:\n",
     "        MBFProfile_Array.SetValue(i, Rays_MBF.GetValue(closest_point_id))\n",
     "        TerritoryProfile_Array.SetValue(i, Rays_territory.GetValue(closest_point_id))\n",
-    "        WallThickness_Array.SetValue(i, Rays_thickness.GetValue(closest_point_id))\n",
+    "        #WallThickness_Array.SetValue(i, Rays_thickness.GetValue(closest_point_id))\n",
     "    \n",
     "\n",
     "MyocardiumSurface.GetPointData().AddArray(MBFProfile_Array)\n",
     "MyocardiumSurface.GetPointData().AddArray(TerritoryProfile_Array)\n",
-    "MyocardiumSurface.GetPointData().AddArray(WallThickness_Array)\n",
+    "#MyocardiumSurface.GetPointData().AddArray(WallThickness_Array)\n",
     "\n",
     "WriteVTPFile(f\"{OutputFolder}/MyocardiumSurface.vtp\", MyocardiumSurface)"
    ]
