--- a/CABG/MBFTools/RayBasedProfile.ipynb
+++ b/CABG/MBFTools/RayBasedProfile.ipynb
@@ -36,31 +36,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B\"\n",
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU04B\"\n",
     "slice_apex = f\"{InputFolder}/Slice_Apex.vtp\"\n",
     "slice_base = f\"{InputFolder}/Slice_Base.vtp\"\n",
     "#InputMyocardium = f\"{InputFolder}/Myocardium.vtp\"\n",
-    "InputMBF = f\"{InputFolder}/MBF_Territories.vtu\"\n",
+    "InputMBF = f\"{InputFolder}/MBF_Map.vtu\"\n",
     "#InputMyocardiumVTU = f\"{InputFolder}/MyocardiumModel.vtu\"\n",
     "OutputFolder = f\"{InputFolder}/RayCastingResults\"\n",
     "\n",
     "\n",
-    "scale = 'mm'"
+    "scale = 'cm'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkdir: /Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B/RayCastingResults: File exists\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import vtk\n",
@@ -80,7 +72,7 @@
     "    L_Section_Ray = 10\n",
     "    L_Sphere_Ray = 5\n",
     "    Ray_Thickness = 0.02\n",
-    "    Base_Cover = 3\n",
+    "    Base_Cover = 3.5\n",
     "    Apex_Cover = 0\n",
     "\n",
     "elif scale == 'mm':\n",
@@ -88,7 +80,7 @@
     "    L_Section_Ray = 100\n",
     "    L_Sphere_Ray = 50\n",
     "    Ray_Thickness = 0.2\n",
-    "    Base_Cover = 20\n",
+    "    Base_Cover = 35\n",
     "    Apex_Cover = 0\n",
     "\n",
     "else:\n",
@@ -105,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +114,9 @@
     "def BoldLine(centerline):\n",
     "    tube_filter = vtk.vtkTubeFilter()\n",
     "    tube_filter.SetInputData(centerline)\n",
-    "    tube_filter.SetRadius(Ray_Thickness)  # Adjust this value to change thickness\n",
-    "    tube_filter.SetNumberOfSides(50)  # Higher = smoother tube\n",
-    "    tube_filter.CappingOn()  # Close tube ends\n",
+    "    tube_filter.SetRadius(Ray_Thickness)  \n",
+    "    tube_filter.SetNumberOfSides(50)  \n",
+    "    tube_filter.CappingOn()  \n",
     "    tube_filter.Update()\n",
     "    \n",
     "    return tube_filter.GetOutput()\n",
@@ -243,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,15 +266,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Extracting the Centerline of the Myocardium\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"--- Extracting the Centerline of the Myocardium\")\n",
     "cl_file = f\"{OutputFolder}/CenterLine.vtp\"\n",
@@ -323,25 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'scalars'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(MBF_.GetPointData().GetNumberOfArrays()):\n",
     "    arrayname_ = MBF_.GetPointData().GetArrayName(i)\n",
     "    if 'scalars' in arrayname_.lower():\n",
     "        ScalarArray = arrayname_\n",
+    "    elif 'MappedScalar' in arrayname_:\n",
+    "        ScalarArray = \"MappedScalar\"\n",
     "\n",
     "ScalarArray"
    ]
@@ -513,8 +488,8 @@
     "            ray_projected = ProbeFilter(ray, MBF)\n",
     "            \n",
     "            mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "            mbf_values = mbf_profile[mbf_profile > 0]\n",
-    "            average_mbf = np.mean(mbf_values)\n",
+    "            #mbf_values = mbf_profile[mbf_profile > 0]\n",
+    "            average_mbf = np.mean(mbf_profile)\n",
     "            mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "            \n",
     "            mbf_profile.SetName(\"MBFProfile\")\n",
@@ -584,8 +559,8 @@
     "        ray_projected = ProbeFilter(ray, Apex)\n",
     "            \n",
     "        mbf_profile = vtk_to_numpy(ray_projected.GetPointData().GetArray(ScalarArray))\n",
-    "        mbf_values = mbf_profile[mbf_profile > 0]\n",
-    "        average_mbf = np.mean(mbf_values)\n",
+    "        #mbf_values = mbf_profile[mbf_profile > 0]\n",
+    "        average_mbf = np.mean(mbf_profile)\n",
     "        mbf_profile = numpy_to_vtk(np.array([average_mbf for _ in range(ray_projected.GetNumberOfPoints())]))\n",
     "        \n",
     "        mbf_profile.SetName(\"MBFProfile\")\n",
@@ -638,17 +613,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Visualizing Ray Casting\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"--- Visualizing Ray Casting\")\n",
     "CLPoints = CenterLine.GetPoints()\n",
@@ -671,29 +638,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Ray Casting Across the Myocardium\n",
-      "------ Ray Casting across Sections along Myocardium:\n",
-      "    Progress: 0%\n",
-      "    Progress: 10%\n",
-      "    Progress: 20%\n",
-      "    Progress: 30%\n",
-      "    Progress: 40%\n",
-      "    Progress: 50%\n",
-      "    Progress: 60%\n",
-      "    Progress: 70%\n",
-      "    Progress: 80%\n",
-      "    Progress: 90%\n",
-      "    Progress: 100%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"--- Ray Casting Across the Myocardium\")\n",
     "Rays_Myocardium = RayCastingAlongMyocardium(CLPointsArray)"
@@ -701,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,36 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------ Ray Casting across the Apex Hemisphere:\n",
-      "    Progress: 0%\n",
-      "    Progress: 10%\n",
-      "    Progress: 20%\n",
-      "    Progress: 30%\n",
-      "    Progress: 40%\n",
-      "    Progress: 50%\n",
-      "    Progress: 60%\n",
-      "    Progress: 70%\n",
-      "    Progress: 80%\n",
-      "    Progress: 90%\n",
-      "    Progress: 100%\n",
-      "    Progress: 100%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Rays_Hemisphere = RayCastingAcrossSphere()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +751,7 @@
     "MyocardiumSurface.GetPointData().AddArray(TerritoryProfile_Array)\n",
     "#MyocardiumSurface.GetPointData().AddArray(WallThickness_Array)\n",
     "\n",
-    "WriteVTPFile(f\"{OutputFolder}/MyocardiumSurface.vtp\", MyocardiumSurface)"
+    "WriteVTPFile(f\"{InputFolder}/MyocardiumSurface.vtp\", MyocardiumSurface)"
    ]
   },
   {
