Remove other methods

--- a/CABG/MBFTools/PolarPlotGradient.ipynb
+++ b/CABG/MBFTools/PolarPlotGradient.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03A/PolarMap\"\n",
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU04A/PolarMap\"\n",
     "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
     "PolarMap = ReadVTPFile(polar_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -44,23 +44,23 @@
     "MBFPolarValue = vtk_to_numpy(PolarMap.GetPointData().GetArray(\"MBFProfile\"))\n",
     "#MBFPolarValue = MBFPolarValue[(MBFPolarValue < 1000) & (MBFPolarValue > -100)]\n",
     "X = MBFPolarValue.reshape(-1,1)\n",
-    "kmeans = KMeans(n_clusters=2, random_state=42)\n",
+    "kmeans = KMeans(n_clusters=2, random_state=5)\n",
     "kmeans.fit(X)\n",
     "labels = kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "410634"
+       "220326"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,16 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[116.96689, 70.072395]"
+       "[19.008059, 40.125057]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False, False, False, ...,  True,  True,  True])"
+       "array([ True,  True,  True, ..., False,  True, False])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,111 +150,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU03B/PolarMap\"\n",
+    "InputFolder = \"/Users/ana/Documents/AnahitaSeresti/05_PrePostCABG/RayCasting/SU04B/PolarMap\"\n",
     "polar_map = os.path.join(InputFolder, \"MyocardiumPolarMap.vtp\")\n",
     "PolarMap = ReadVTPFile(polar_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.mixture import GaussianMixture\n",
-    "\n",
     "MBFPolarValue = vtk_to_numpy(PolarMap.GetPointData().GetArray(\"MBFProfile\"))\n",
-    "X = MBFPolarValue.reshape(-1,1)\n",
-    "gmm = GaussianMixture(n_components=2, means_init=np.array([[mean_ischemic], [mean_healthy]]))\n",
-    "gmm.fit(X)\n",
-    "labels = gmm.predict(X)\n",
-    "\n"
+    "d_ischemic = np.abs(MBFPolarValue - mean_ischemic)\n",
+    "d_healthy = np.abs(MBFPolarValue - mean_healthy)\n",
+    "\n",
+    "ischemia_mask = (d_ischemic < d_healthy)\n",
+    "ischemia_array = numpy_to_vtk(ischemia_mask.astype(np.uint8), deep=True)\n",
+    "ischemia_array.SetName(\"IsIschemic\")\n",
+    "PolarMap.GetPointData().AddArray(ischemia_array)\n",
+    "\n",
+    "ofile = os.path.join(InputFolder, \"MyocardiumPolarMapIschemic.vtp\")\n",
+    "WriteVTPFile(ofile, PolarMap)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(labels[labels == 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 96.69513456],\n",
-       "       [139.47140924]])"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gmm.means_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.01288013, 0.98711987])"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gmm.weights_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([1]), array([767771]))"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.unique(labels, return_counts=True)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
