Divide ischemic into groups: Modify

--- a/CABG/MBFTools/InterPatientVariability.ipynb
+++ b/CABG/MBFTools/InterPatientVariability.ipynb
@@ -523,9 +523,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">30% drop SU03 Diag\n",
+      ">30% drop SU03 RCA\n",
+      "20-30% drop SU04 LCx\n",
+      "10-20% drop SU07 LAD\n",
+      "10-20% drop SU07 RCA\n",
+      ">30% drop SU11 LCx\n",
+      ">30% drop SU13 LAD\n",
+      "10-20% drop SU13 RCA\n",
+      ">30% drop SU14 RCA\n",
+      "20-30% drop SU23 Diag\n",
+      "20-30% drop SU26 LAD\n",
+      "20-30% drop SU26 RCA\n",
+      ">30% drop SU27 RCA\n",
+      "20-30% drop SU30 LCx\n",
+      ">30% drop VA10 LAD\n",
+      "10-20% drop VA10 RCA\n",
+      "10-20% drop VA13 LAD\n",
+      "20-30% drop VA16 RCA\n"
+     ]
+    }
+   ],
    "source": [
     "dataMapped = []\n",
     "\n",
